# first-chat-agent

first-chat-agent-backend/: main.py  pyproject.toml
first-chat-agent-frontend/: package.json
first-chat-agent-frontend/src/components/: Chat.vue
frontend/: index.html  package-lock.json
frontend/src/: App.vue
