[project]
name = "first chat agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.26",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.35.0",
]
